--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -240,7 +240,7 @@
     <bool name="proximity_settings_on">true</bool>
 
     <!-- If false, removes the X-Divert option from Call Settings -->
-    <bool name="config_xdivert_enable">true</bool>
+    <bool name="config_xdivert_enable">false</bool>
 
     <bool name="config_regional_ussd_hide_error_from_network_enable">false</bool>
 
