--- a/res/xml/phone_account_settings.xml
+++ b/res/xml/phone_account_settings.xml
@@ -48,13 +48,13 @@
             android:summaryOff="@string/duration_disable_summary"
             android:order="1100" />
 
-        <CheckBoxPreference
+        <!-- <CheckBoxPreference
             android:key="button_vibrate_after_connected"
             android:title="@string/vibrate_after_connected_title"
             android:persistent="false"
             android:defaultValue="true"
             android:summary="@string/vibrate_after_connected_summary"
-            android:order="1200" />
+            android:order="1200" /> -->
 
         <CheckBoxPreference
             android:key="button_proximity_key"
